Stop collapsing accordion sections

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -267,7 +267,6 @@ legend {
 }
 
 .accordion-section {
-  cursor: pointer;
   clear: both;
   margin-bottom: 2em;
 }
