--- a/public/assets/sass/editor.scss
+++ b/public/assets/sass/editor.scss
@@ -274,7 +274,6 @@ legend {
 }
 
 .accordion-section {
-  cursor: pointer;
   clear: both;
   margin-bottom: 2em;
 }
